# rqmd

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.QMD  README.md
crates/rmd-cli/: Cargo.toml
crates/rmd-cli/src/: cli.rs  format_helpers.rs  main.rs  output.rs  search_view.rs  state.rs
crates/rmd-cli/src/commands/: cleanup.rs  collection.rs  context.rs  embed.rs  get.rs  llm_stub.rs  ls.rs  mod.rs  multi_get.rs  pull.rs  query.rs  search.rs  status.rs  update.rs  vsearch.rs
crates/rmd-core/: Cargo.toml
crates/rmd-core/src/: collections.rs  db.rs  lib.rs  paths.rs  rmd_store.rs
crates/rmd-core/src/llm/: config.rs  error.rs  format.rs  gpu.rs  llama_cpp.rs  session.rs  singleton.rs  types.rs  worker.rs
crates/rmd-core/src/store/: ast.rs  cache.rs  chunking.rs  docid.rs  documents.rs  embeddings.rs  lookup.rs  mod.rs  path.rs  reindex.rs  rrf.rs  search.rs  status.rs
crates/rmd-core/src/store_ops/: cache_keys.rs  chunk_tokens.rs  embed.rs  hybrid.rs  mod.rs  rerank.rs  search.rs  vector_search.rs
crates/rmd-core/tests/: ci_mode.rs  collections_config.rs  collections_io.rs  collections_mutations.rs  config.rs  db_open.rs  format.rs  gpu.rs  integration_embed.rs  integration_expand.rs  integration_pull.rs  integration_rerank.rs  local_config.rs  prompt.rs  pull_validate.rs  rmd_store.rs  session.rs  session_arc_coercion.rs  singleton.rs  store_ops_chunk_tokens.rs  store_ops_expand_rerank.rs  store_ops_generate_embeddings.rs  store_ops_hybrid.rs  store_ops_search_vec.rs  store_reindex.rs  store_schema.rs  store_search_fts.rs  types.rs
crates/rmd-core/tests/common/: mock_llm.rs  mod.rs
crates/rmd-llm/: Cargo.toml
crates/rmd-llm/examples/: spike_01_backend.rs  spike_02_embed.rs  spike_03_rerank.rs  spike_04_grammar.rs  spike_05_context_send.rs
crates/rmd-llm/src/: backend.rs  config.rs  error.rs  format.rs  gpu.rs  lib.rs  llama_cpp.rs  prompt.rs  pull.rs  session.rs  singleton.rs  traits.rs  types.rs  worker.rs
crates/rmd-llm/src/store_ops/: cache_keys.rs  chunk_tokens.rs  embed.rs  expand.rs  hybrid.rs  mod.rs  rerank.rs  search.rs  structured.rs  vector_search.rs
crates/rmd-llm/tests/: ci_mode.rs  config.rs  format.rs  gpu.rs  integration_embed.rs  integration_expand.rs  integration_pull.rs  integration_rerank.rs  prompt.rs  pull_validate.rs  session.rs  session_arc_coercion.rs  singleton.rs  store_ops_chunk_tokens.rs  store_ops_expand_rerank.rs  store_ops_generate_embeddings.rs  store_ops_hybrid.rs  store_ops_search_vec.rs  types.rs
crates/rmd-llm/tests/common/: mock_llm.rs  mod.rs
crates/rmd-mcp/: Cargo.toml
crates/rmd-mcp/src/: lib.rs
crates/rqmd/: Cargo.toml  README.md
crates/rqmd-cli/: Cargo.toml
crates/rqmd-cli/src/: cli.rs  collection_filter.rs  color.rs  format_helpers.rs  main.rs  output.rs  search_view.rs  state.rs
crates/rqmd-cli/src/commands/: bench.rs  cleanup.rs  collection.rs  context.rs  embed.rs  get.rs  init.rs  llm_stub.rs  ls.rs  mcp.rs  mod.rs  multi_get.rs  pull.rs  query.rs  search.rs  skill.rs  status.rs  update.rs  vsearch.rs
crates/rqmd-cli/tests/: cli.rs  eval_harness.rs
crates/rqmd-cli/tests/common/: mod.rs
crates/rqmd-core/: Cargo.toml  README.md
crates/rqmd-core/src/: collections.rs  db.rs  env_keys.rs  lib.rs  paths.rs  rqmd_store.rs
crates/rqmd-core/src/bench/: mod.rs  score.rs  types.rs
crates/rqmd-core/src/llm/: backend.rs  config.rs  device.rs  error.rs  format.rs  gpu.rs  llama_cpp.rs  mod.rs  prompt.rs  pull.rs  session.rs  singleton.rs  traits.rs  types.rs  worker.rs
crates/rqmd-core/src/store/: ast.rs  cache.rs  chunking.rs  context.rs  docid.rs  doctor.rs  documents.rs  embeddings.rs  lookup.rs  maintenance.rs  mod.rs  path.rs  reindex.rs  rrf.rs  schema.rs  search.rs  snippet.rs  status.rs  store_config.rs  virtual_path.rs
crates/rqmd-core/src/store_ops/: cache_keys.rs  chunk_tokens.rs  embed.rs  expand.rs  hybrid.rs  mod.rs  rerank.rs  search.rs  structured.rs  vector_search.rs
crates/rqmd-core/tests/: bench_score.rs  ci_mode.rs  collections_config.rs  collections_io.rs  collections_mutations.rs  config.rs  db_open.rs  eval.rs  format.rs  gpu.rs  integration_embed.rs  integration_expand.rs  integration_pull.rs  integration_rerank.rs  local_config.rs  model_exists.rs  native_log_redirect.rs  prompt.rs  pull_validate.rs  rqmd_store.rs  session.rs  session_arc_coercion.rs  singleton.rs  store_content_addressable.rs  store_context.rs  store_edge_cases.rs  store_lookup.rs  store_maintenance.rs  store_ops_chunk_tokens.rs  store_ops_embed_resilience.rs  store_ops_expand_rerank.rs  store_ops_generate_embeddings.rs  store_ops_hybrid.rs  store_ops_search_vec.rs  store_reindex.rs  store_schema.rs  store_search_fts.rs  types.rs
crates/rqmd-core/tests/common/: mock_llm.rs  mod.rs
crates/rqmd-mcp/: Cargo.toml  README.md
crates/rqmd-mcp/src/: http.rs  lib.rs  server.rs  tests.rs  tools.rs  worker.rs
crates/rqmd-mcp/tests/: mcp_llm.rs
crates/rqmd/skills/rqmd/: SKILL.md
crates/rqmd/skills/rqmd/references/: mcp-setup.md
crates/rqmd/src/: cli.rs  format_helpers.rs  main.rs  search_view.rs  state.rs
crates/rqmd/src/commands/: context.rs  doctor.rs  get.rs  init.rs  ls.rs  mcp.rs  mod.rs  multi_get.rs  query.rs  skill.rs
crates/rqmd/tests/: cli.rs  mcp_stdio.rs
skills/rqmd/: SKILL.md
skills/rqmd/references/: mcp-setup.md
