[workspace]
resolver = "3"
members = [
    "crates/rmd-core",
    "crates/rmd-mcp",
    "crates/rmd-cli",
]

[workspace.package]
version     = "0.0.1"
edition     = "2024"
license     = "MIT"
authors     = ["Akira Ishino <akira@lumilab.jp>"]
repository  = "https://github.com/stn/rmd"
description = "Rust port of tobi/qmd — on-device hybrid search for markdown"

[workspace.dependencies]
rmd-core = { path = "crates/rmd-core", version = "0.0.1" }
rmd-mcp  = { path = "crates/rmd-mcp",  version = "0.0.1" }

serde      = { version = "1", features = ["derive"] }
indexmap   = { version = "2", features = ["serde"] }
thiserror  = "2"
tempfile   = "3"
rusqlite   = { version = "0.39", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1.9"
