[workspace]
resolver = "3"
members = [
    "crates/rqmd-core",
    "crates/rqmd-mcp",
    "crates/rqmd",
]

[workspace.package]
version      = "0.2.0"
edition      = "2024"
license      = "MIT"
authors      = ["Akira Ishino <akira@lumilab.jp>"]
repository   = "https://github.com/stn/rqmd"
homepage     = "https://github.com/stn/rqmd"
description  = "Rust port of tobi/qmd — on-device hybrid search for markdown"

[workspace.dependencies]
rqmd-core = { path = "crates/rqmd-core", version = "0.2.0" }
rqmd-mcp  = { path = "crates/rqmd-mcp",  version = "0.2.0" }

serde      = { version = "1", features = ["derive"] }
indexmap   = { version = "2", features = ["serde"] }
thiserror  = "2"
tempfile   = "3"
rusqlite   = { version = "0.39", features = ["bundled", "load_extension"] }
sqlite-vec = "0.1.9"
