[package]
name        = "rmd-cli"
description = "rmd: command-line interface (binary `rmd`)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "rmd"
path = "src/main.rs"

[dependencies]
rmd-core   = { workspace = true }
rmd-llm    = { workspace = true }
rmd-mcp    = { workspace = true }
clap       = { version = "4", features = ["derive", "wrap_help"] }
anyhow     = "1"
serde_json = "1"
