[package]
name        = "rmd-cli"
description = "rmd: command-line interface (binary `rmd`)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "rmd"
path = "src/main.rs"

[dependencies]
rmd-core   = { workspace = true }
rmd-llm    = { workspace = true }
rmd-mcp    = { workspace = true }
clap       = { version = "4", features = ["derive", "wrap_help"] }
anyhow     = "1"
serde_json = "1"
# Async runtime: `rmd-llm` exposes async fns (hybrid_query, generate_embeddings, etc.),
# so `main` runs under `#[tokio::main]`. Sync commands stay sync inside the async
# dispatcher (no `.await`). `time` feature is needed by tokio internals used during
# pull (spawn_blocking) and embed (session timers).
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
