[package]
name        = "rmd-core"
description = "rmd: search engine core (store, db, chunking, collections)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde        = { workspace = true }
serde_norway = "0.9"
indexmap     = { workspace = true }
thiserror    = { workspace = true }
rusqlite     = { workspace = true }
sqlite-vec   = { workspace = true }

[dev-dependencies]
serial_test = "3"
tempfile    = { workspace = true }
