[package]
name        = "rmd-core"
description = "rmd: search engine core (store, db, chunking, collections)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde        = { workspace = true }
serde_norway = "0.9"
indexmap     = { workspace = true }
thiserror    = { workspace = true }
rusqlite     = { workspace = true }
sqlite-vec   = { workspace = true }
sha2         = "0.10"
regex        = "1"
ignore       = "0.4"
globset      = "0.4"
serde_json   = "1"

[dev-dependencies]
serial_test = "3"
tempfile    = { workspace = true }
