[package]
name        = "rmd-core"
description = "rmd: search engine core (store, db, chunking, collections)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde        = { workspace = true }
serde_norway = "0.9"
indexmap     = { workspace = true }
thiserror    = { workspace = true }
rusqlite     = { workspace = true }
sqlite-vec   = { workspace = true }
sha2         = "0.10"
regex        = "1"
ignore       = "0.4"
globset      = "0.4"
serde_json   = "1"
bytemuck     = "1"

# AST-aware chunking for code files. ABI 互換: 各 grammar クレートは
# tree-sitter-language ^0.1 経由で host 側 tree-sitter 0.26 とリンクできる。
# Windows ビルドには MSVC Build Tools (Desktop C++) が必要。
tree-sitter            = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python     = "0.25"
tree-sitter-go         = "0.25"
tree-sitter-rust       = "0.24"
streaming-iterator     = "0.1"

[dev-dependencies]
serial_test = "3"
tempfile    = { workspace = true }
