[package]
name        = "rmd-mcp"
description = "rmd: MCP (Model Context Protocol) server library, launched via `rmd mcp`"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
rmd-core = { workspace = true }
