[package]
name        = "rqmd-cli"
description = "rqmd: command-line interface (binary `rqmd`)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "rqmd"
path = "src/main.rs"

[dependencies]
rqmd-core   = { workspace = true }
rqmd-mcp    = { workspace = true }
clap       = { version = "4", features = ["derive", "wrap_help"] }
anyhow     = "1"
serde      = { workspace = true }
serde_json = "1"
# Needed to build the ordered `backends` / `summary` maps that the
# `rqmd_core::bench` result types expose (IndexMap + serde_json preserve_order
# keep the bm25/vector/hybrid/full key order in JSON output).
indexmap   = { workspace = true }
# Async runtime: `rqmd_core::llm` and `rqmd_core::store_ops` expose async fns
# (hybrid_query, generate_embeddings, etc.), so `main` runs under
# `#[tokio::main]`. Sync commands stay sync inside the async dispatcher (no
# `.await`). `time` feature is needed by tokio internals used during pull
# (spawn_blocking) and embed (session timers).
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[features]
# GPU backends re-exported from rqmd-core so users can invoke `cargo build -p
# rqmd-cli --features metal` (etc.) without referencing the core crate name.
metal  = ["rqmd-core/metal"]
cuda   = ["rqmd-core/cuda"]
vulkan = ["rqmd-core/vulkan"]
