[package]
name        = "rqmd-cli"
description = "rqmd: command-line interface (binary `rqmd`)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "rqmd"
path = "src/main.rs"

[dependencies]
rqmd-core   = { workspace = true }
rqmd-mcp    = { workspace = true }
clap       = { version = "4", features = ["derive", "wrap_help"] }
anyhow     = "1"
serde      = { workspace = true }
serde_json = "1"
# Needed to build the ordered `backends` / `summary` maps that the
# `rqmd_core::bench` result types expose (IndexMap + serde_json preserve_order
# keep the bm25/vector/hybrid/full key order in JSON output).
indexmap   = { workspace = true }
# Async runtime: `rqmd_core::llm` and `rqmd_core::store_ops` expose async fns
# (hybrid_query, generate_embeddings, etc.), so `main` runs under
# `#[tokio::main]`. Sync commands stay sync inside the async dispatcher (no
# `.await`). `time` feature is needed by tokio internals used during pull
# (spawn_blocking) and embed (session timers).
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
# `collection_filter` unit tests build a YAML-backed `Config` on a temp path.
tempfile   = { workspace = true }
# E2E CLI tests (`tests/cli.rs`) spawn the built `rqmd` binary via
# `Command::cargo_bin("rqmd")` and assert on stdout/stderr/exit code. This is
# the Rust port of qmd's `test/cli.test.ts`. `serde_json` (a normal dependency
# above) is reused in the tests for JSON-format assertions.
assert_cmd = "2"
# `tests/mcp_stdio.rs` drives a real `rqmd mcp` child over its stdin/stdout with
# an rmcp client. `transport-child-process` provides `TokioChildProcess` and
# enables `tokio/process` (unified into the crate's `tokio` for the test build);
# `#[tokio::test]` itself relies on the `rt-multi-thread` + `macros` already
# enabled on the normal `tokio` dependency above, so no dev `tokio` entry needed.
rmcp       = { version = "1.7", default-features = false, features = ["client", "transport-child-process"] }
# Blocking HTTP client for the `mcp --http` / daemon e2e tests (`tests/cli.rs`):
# they spawn the server binary, poll `/health`, and POST `/query`. Localhost is
# plain HTTP, so the TLS default feature is disabled; only `json` is needed.
ureq       = { version = "2", default-features = false, features = ["json"] }

[features]
# GPU backends re-exported from rqmd-core so users can invoke `cargo build -p
# rqmd-cli --features metal` (etc.) without referencing the core crate name.
metal  = ["rqmd-core/metal"]
cuda   = ["rqmd-core/cuda"]
vulkan = ["rqmd-core/vulkan"]
