[package]
name        = "rqmd-core"
description = "rqmd: search engine core (store, db, chunking, collections, LLM integration)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
serde        = { workspace = true }
serde_norway = "0.9"
indexmap     = { workspace = true }
thiserror    = { workspace = true }
rusqlite     = { workspace = true }
sqlite-vec   = { workspace = true }
sha2         = "0.10"
regex        = "1"
# Unicode general-category lookup (unicode-rs). Used by `store::schema`'s
# `sanitize_fts5_term` to match TS `\p{L}` / `\p{N}` exactly — `char::
# is_alphanumeric()` is broader (it includes `Other_Alphabetic` combining
# marks) and would diverge from the TS content filter.
unicode-properties = { version = "0.1", default-features = false, features = ["general-category"] }
ignore       = "0.4"
globset      = "0.4"
# WHATWG `application/x-www-form-urlencoded` parser — matches JS
# `URLSearchParams` semantics for the `?index=` query in `store::virtual_path`.
form_urlencoded = "1.2"
# `preserve_order` is REQUIRED so `serde_json::Map` keeps insertion order in
# `store_ops::cache_keys`. Cache-key parity with qmd's `JSON.stringify` (which
# emits object keys in source order) depends on this — without it, the
# `serde_json::Map` defaults to BTreeMap and silently reorders keys.
serde_json   = { version = "1", features = ["preserve_order"] }
bytemuck     = "1"

# AST-aware chunking for code files. ABI 互換: 各 grammar クレートは
# tree-sitter-language ^0.1 経由で host 側 tree-sitter 0.26 とリンクできる。
# Windows ビルドには MSVC Build Tools (Desktop C++) が必要。
tree-sitter            = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python     = "0.25"
tree-sitter-go         = "0.25"
tree-sitter-rust       = "0.24"
streaming-iterator     = "0.1"

# LLM backend.
#
# We rely on the upstream default features (`openmp`, `android-shared-stdcxx`).
# OpenMP is what gives us CPU parallelism inside llama.cpp during decode; if a
# future contributor switches to `default-features = false`, they MUST add
# `features = ["openmp"]` back, or batch embedding becomes single-threaded.
llama-cpp-2 = "0.1"
encoding_rs = "0.8"

# HuggingFace model download. Pinned to 0.4 to match upstream llama-cpp-rs
# workspace; verify 0.4 vs 0.5 snapshot semantics before bumping.
hf-hub = "0.4"

# Async runtime — the `llm` module's public `Llm` trait is async, and parallel
# embed / rerank fan-out uses tokio::sync::oneshot to bridge the dedicated FFI
# worker threads back to the async caller.
tokio       = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-util  = "0.7"
async-trait = "0.1"
futures     = "0.3"

# Lock-free singleton + model/pool slots without holding a std::sync::Mutex
# across an .await (clippy::await_holding_lock would reject that).
arc-swap = "1"

dirs    = "5"
tracing = "0.1"

[dev-dependencies]
serial_test = "3"
tempfile    = { workspace = true }
anyhow      = "1"

[features]
default = []
metal   = ["llama-cpp-2/metal"]
cuda    = ["llama-cpp-2/cuda"]
vulkan  = ["llama-cpp-2/vulkan"]
