[package]
name        = "rqmd-mcp"
description = "rqmd: MCP (Model Context Protocol) server library, launched via `rqmd mcp`"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
rqmd-core = { workspace = true }
